--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.show-sql = true
 logging.level.root = INFO
 #Opcional, configurar niveles por paquetes
 #logging:level.gm.inventarios-DEBUG
+
+server.port=${PORT:8080}
