--- a/inventario/pom.xml
+++ b/inventario/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<spring-boot.repackage.skip>false</spring-boot.repackage.skip>
 	</properties>
 	<dependencies>
 		<dependency>
