Cambio bd de mysql a postgresSQL

--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=inventario
 spring.output.ansi.enabled=always
 #Conexion a mysql
-spring.datasource.url = jdbc:mysql://localhost:3306/inventario_db?createDatabaseIfNotExist=true
-spring.datasource.username = root
-spring.datasource.password = admin123
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+#spring.datasource.url = jdbc:mysql://localhost:3306/inventario_db?createDatabaseIfNotExist=true
+#spring.datasource.username = root
+#spring.datasource.password = admin123
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql = true
 
 #Configurar el patron del log
 #logging.pattern.console = [%thread] %-5level: %logger - %msg%n
@@ -14,5 +14,17 @@ spring.jpa.show-sql = true
 logging.level.root = INFO
 #Opcional, configurar niveles por paquetes
 #logging:level.gm.inventarios-DEBUG
+
+
+#Conexión PostgresSQL
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
 server.port=${PORT:8080}
