Cambio en properties

--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -17,14 +17,15 @@ logging.level.root = INFO
 
 
 #Conexión PostgresSQL
+# Database configuration
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
 
 server.port=${PORT:8080}
