--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=inventario
 spring.output.ansi.enabled=always
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${DATABASE_PUBLIC_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
