Cambio en properties

--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=inventario
 spring.output.ansi.enabled=always
-spring.datasource.url=${DATABASE_PUBLIC_URL}
+# application.properties
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:inventario}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
 server.port=${PORT:8080}
