Cambio en properties

--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=inventario
 spring.output.ansi.enabled=always
 # application.properties
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:inventario}
-spring.datasource.username=${PGUSER:postgres}
-spring.datasource.password=${PGPASSWORD:password}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
 server.port=${PORT:8080}
