Cambio en properties

--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=inventario
 spring.output.ansi.enabled=always
 # application.properties
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://switchback.proxy.rlwy.net:54282/railway
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
