Cambio en properties

--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=inventario
 spring.output.ansi.enabled=always
 # application.properties
 spring.datasource.url=jdbc:postgresql://switchback.proxy.rlwy.net:54282/railway
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=vShaMwtTjlwVRnwkUOUzPNJueUjfwtAr
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
