--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -1,18 +1,23 @@
 spring.application.name=inventario
 spring.output.ansi.enabled=always
-#Conexion a mysql
-spring.datasource.url = jdbc:mysql://localhost:3306/inventario_db?createDatabaseIfNotExist=true
-spring.datasource.username = root
-spring.datasource.password = admin123
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+# Conexión a H2 en memoria
+spring.datasource.url=jdbc:h2:mem:inventario_db
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Configuración JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#Configurar el patron del log
-#logging.pattern.console = [%thread] %-5level: %logger - %msg%n
-#Configurar el nivel del log (INF)
-logging.level.root = INFO
-#Opcional, configurar niveles por paquetes
-#logging:level.gm.inventarios-DEBUG
+# Activar consola H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
+# Logs
+logging.level.root=INFO
+
+# Puerto del servidor
 server.port=${PORT:8080}
